# ETF-DeFi

./: .gitignore  Anchor.toml  Cargo.toml  close-strategy.js  etf-vault-deployment.json  package-lock.json  package.json
backend/: package-lock.json  package.json  tsconfig.json
backend/migrations/: 001_create_wallet_connections.sql
backend/src/: index.ts  swagger.ts
backend/src/config/: supabase.ts
backend/src/middleware/: auth.ts
backend/src/routes/: authRouter.ts  jupiterRouter.ts  walletRouter.ts
backend/src/utils/: validation.ts
crates/strategy-interface/: Cargo.toml
crates/strategy-interface/src/: lib.rs  state.rs  tests.rs
programs/etf-defi/: Cargo.toml
programs/etf-defi/src/: lib.rs
programs/marinade_strategy/: Cargo.toml
programs/marinade_strategy/src/: lib.rs
programs/vault/: Cargo.toml  README.md  Xargo.toml
programs/vault/src/: lib.rs  state.rs  swap.rs
rebalancing-mxe/: Anchor.toml  Arcium.toml
rebalancing-mxe/encrypted-ixs/src/: lib.rs
rebalancing-mxe/programs/rebalancing-mxe/: Cargo.toml
rebalancing-mxe/programs/rebalancing-mxe/src/: lib.rs
rebalancing-mxe/scripts/: check-mxe-authority.js  finalize-comp-def.ts  find-comp-def-pda.js  init-comp-def-simple.ts  init-comp-def.ts
scripts/: configure-mock-oracle.ts  convert-to-base58.ts  create-etf-vault.ts  delegate-oracle.ts  deploy-etf-vault.ts  deploy-vault.ts  fetch-marinade-accounts.ts  initialize-mock-oracle.ts  show-marinade-yield.ts  test-mock-oracle-direct.ts  update-oracle-for-tests.ts  update-prices-er.ts  update-prices.ts
tests/: etf-defi.ts  marinade-strategy.ts  mock-oracle.ts  pyth-prices.ts  switchboard-integration.ts  switchboard-prices.ts  vault-sol.ts  vault.ts
tests/helpers/: marinade-accounts.ts  mock-pyth.ts
