[workspace]
members = [
    "crates/strategy-interface",
    "programs/etf-defi",
    "programs/vault",
    "programs/marinade_strategy",
    "crates/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1