[package]
name = "marinade-strategy"
version = "0.1.0"
description = "Marinade Finance liquid staking strategy for ETF-DeFi vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marinade_strategy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
strategy-interface = { path = "../../crates/strategy-interface" }
borsh = "1.0"
marinade-cpi = "0.4.0"
