[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["devnet"]
devnet = []
mainnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
strategy-interface = { path = "../../crates/strategy-interface" }
marinade-strategy = { path = "../marinade_strategy", features = ["cpi"] }
borsh = "0.10.3"
bytemuck = "1.14"
ephemeral-rollups-sdk = { version = "0.2.12", features = ["anchor"] }